<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SerialPortAndroid</string>
    <string name="title_activity_main">Stick Slip</string>
    <string name="action_settings">Settings</string>
    <string name="arrow_to_left_description">Arrow to the left</string>
    <string name="title_activity_full_screen_sliding">FullScreenSlidingActivity</string>
    <string name="title_activity_all_sides_sliding">AllSidesSlidingActivity</string>
    <string name="main_menu_button_all_sides_sliding">Slid to all sides</string>
    <string name="main_menu_button_one_side_sliding">Slid to one side</string>
    <string name="main_menu_button_pwm">PWM</string>
    <string name="one_side_sliding_no_sliding">Deactivated</string>
    <string name="one_side_sliding_to_top">To the top</string>
    <string name="one_side_sliding_to_bottom">To the bottom</string>
    <string name="one_side_sliding_to_left">To the left</string>
    <string name="one_side_sliding_to_right">To the right</string>
    <string name="one_side_sliding_pulses">Send 4 Pulses</string>
    <string name="title_activity_pwm">PwmActivity</string>
    <string name="button_active">Active</string>
    <string name="button_not_active">Not Active</string>
    <string name="label_actuator1">Actuator 1 (GPIO1)</string>
    <string name="label_actuator2">Actuator 2 (GPIO2)</string>
    <string name="label_actuator3">Actuator 3 (GPIO3)</string>
    <string name="label_actuator4">Actuator 4 (GPIO4)</string>
    <string name="title_activity_audio_waveform">AudioWaveformActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
