<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.uta.serialport.activity.MainActivity" >

    <Button
        android:id="@+id/button_slide_one_side"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_slide_all_sides"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/main_menu_button_one_side_sliding" />

    <Button
        android:id="@+id/button_pwm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_slide_one_side"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/main_menu_button_pwm" />

    <Button
        android:id="@+id/button_slide_all_sides"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_slide_one_side"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:text="@string/main_menu_button_all_sides_sliding" />

    <Button
        android:id="@+id/audio_waveform"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_pwm"
        android:layout_below="@+id/button_pwm"
        android:layout_marginTop="45dp"
        android:text="Audio Waveform" />
    
</RelativeLayout>